--- a/src/index.css
+++ b/src/index.css
@@ -470,6 +470,9 @@ body {
     padding: 20px 10px;
     gap: 20px;
   }
+  .about h2{
+    font-size: 20px;
+  }
   .about img{
     display: none;
   }
